--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-/.pnp
-/**/node_modules
-.pnp.js
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+
+**/node_modules
 
