--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "scripts": {
     "client": "cd client && yarn start",
-    "server": "cd server && nodemon server.js",
+    "server": "nodemon server.js",
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "start": "cd server && node server.js",
+    "start": "node server.js",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "test-client": "cd client && yarn test"
   },
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-session": "^1.17.1",
+    "express-sslify": "^1.2.0",
     "firebase-admin": "^9.5.0",
     "lodash": "^4.17.20",
     "nodemailer": "^6.4.18",
