--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.20",
     "markdown-to-jsx": "^7.1.1",
     "material-react-toastify": "^1.0.1",
+    "material-ui-dropzone": "^3.5.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
