--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@date-io/date-fns": "^2.10.8",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,6 +18,7 @@
     "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
     "cross-env": "^7.0.3",
+    "date-fns": "^2.19.0",
     "dateformat": "^4.5.1",
     "firebase": "^8.2.7",
     "flux": "^4.0.1",
@@ -31,6 +34,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^7.0.3",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
