--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "homepage": "https://fgwmagazinesystem.herokuapp.com/",
   "dependencies": {
     "@date-io/date-fns": "^2.10.8",
     "@material-ui/core": "^4.11.3",
