--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "material-react-toastify": "^1.0.1",
     "material-ui-dropzone": "^3.5.0",
     "node-sass": "4.14.1",
+    "nodemailer": "^6.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
