--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "cross-env": "^7.0.3",
     "date-fns": "^2.19.0",
     "dateformat": "^4.5.1",
+    "file-saver": "^2.0.5",
     "firebase": "^8.2.7",
     "flux": "^4.0.1",
+    "jszip": "^3.6.0",
     "lodash": "^4.17.20",
     "markdown-to-jsx": "^7.1.1",
     "material-react-toastify": "^1.0.1",
@@ -29,6 +31,7 @@
     "node-sass": "4.14.1",
     "nodemailer": "^6.5.0",
     "react": "^17.0.1",
+    "react-date-range": "^1.1.3",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-quill": "^1.3.5",
@@ -36,6 +39,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.3",
+    "react-tooltip": "^4.2.17",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
