--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "material-ui-dropzone": "^3.5.0",
     "node-sass": "4.14.1",
     "nodemailer": "^6.5.0",
+    "quill-image-uploader": "^1.2.2",
     "react": "^17.0.1",
     "react-date-range": "^1.1.3",
     "react-dom": "^17.0.1",
