--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "nodemailer": "^6.5.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
