--- a/functions/package.json
+++ b/functions/package.json
@@ -9,14 +9,12 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "10"
+    "node": "12"
   },
   "main": "index.js",
   "dependencies": {
-    "dotenv": "^8.2.0",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1",
-    "nodemailer": "^6.5.0"
+    "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
