--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fgwmagazinesystem.herokuapp.com/",
+  "homepage": "https://thanhchi274.github.io/Enterprise/",
   "dependencies": {
     "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "^4.11.3",
@@ -23,6 +23,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^8.2.7",
     "flux": "^4.0.1",
+    "gh-pages": "^3.1.0",
     "jszip": "^3.6.0",
     "lodash": "^4.17.20",
     "markdown-to-jsx": "^7.1.1",
@@ -52,7 +53,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
